--- a/docker/compose-seed.yaml
+++ b/docker/compose-seed.yaml
@@ -1,6 +1,8 @@
 services:
   postgres:
-    image: postgres:16
+    build:
+      context: ./
+      dockerfile: ./Dockerfile.postgres
     restart: always
     shm_size: 128mb
     environment:
