--- a/docker/compose-dev.yaml
+++ b/docker/compose-dev.yaml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: jsec/f1db
+    image: ghcr.io/jsec/f1db:latest
     restart: always
     shm_size: 128mb
     environment:
